--- a/animation_form.html
+++ b/animation_form.html
@@ -7,6 +7,11 @@
 </head>
 <link rel="stylesheet" href="animation.css">
 <body>
+    <div class="changes">
+        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, et?</h1>
+    </div>
+
+
     <div class="container">
       
         <div class="leftbox">
